# proc-janitor

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  RESEARCH.md  SECURITY.md  build.rs
.claude/: settings.json
.claude/skills/analyze/: SKILL.md
.github/: AGENTS.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
Formula/: proc-janitor.rb
integrations/: AGENTS.md  claude-code-setup.sh  shell-integration.sh  vscode-tasks.json
resources/: AGENTS.md  com.proc-janitor.plist  proc-janitor.service
scripts/: AGENTS.md  install.sh  uninstall.sh
src/: AGENTS.md  cleaner.rs  cli.rs  config.rs  config_template.toml  daemon.rs  doctor.rs  kill.rs  logger.rs  main.rs  scanner.rs  session.rs  util.rs  visualize.rs
tests/: AGENTS.md  integration_test.rs
